--------------------------------------------------------------------------------
Changes for 2.3.0

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.2.1rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.2.0

2.2.0rc2 was released as 2.2.0 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.0rc2

Bug fixes:
..F....... [ZBXNEXT-1371] fixed links in global search results to LLD discovery for non-admin users to say "Discovery" instead of "Discoveries" (Richlv)
........S. [ZBX-7304] fixed wrong SQL statement in processing of escalations (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.2.0rc1

New features:
..F....... [ZBXNEXT-1513] set autofocus for the event acknowledgement text field (Pavels)
........S. [ZBXNEXT-1998] added vmware.fullname[], vmware.version[] key support (wiper)
..F.I...S. [ZBXNEXT-1975] increased the size of alerts table message field to 64KB also on Oracle database (Pavels, wiper)
..F....... [ZBXNEXT-1371] added links to graphs, web monitoring and LLD rules in the search results; thanks to Volker Fröhlich and Marc for patches (Pavels)
.........T [ZBX-6832] improved default templates (e.g., split "Template App Agentless" into 12 templates for each service) (asaveljevs, neogan, Sasha)
..F....... [ZBXNEXT-1851] hid American English, Greek and Polish translations from the frontend (Richlv)

Bug fixes:
........S. [ZBX-7186] fixed recovery-awaiting escalations staying in the database forever if their action, trigger or item is deleted (asaveljevs)
..F....... [ZBX-7280] fixed map background in IE10 (Eduard)
..F....... [ZBX-7276] fixed count of displaying hosts in proxy list (Eduard)
..F....PS. [ZBX-7299] fixed dashboard widget drag'n'drop not working on PHP setups without JSON (Pavels)